--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -78,7 +78,7 @@
     background-image: url("https://i.ytimg.com/vi/2K_fMCfhpcI/maxresdefault.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    padding-top: 35%;
+    padding-top: 30%;
 }
 .item-par{
     color: white;
@@ -108,7 +108,7 @@
     font-size: 1.4rem;
 }
 .item2-content{
-    margin-top: 35%;
+    margin-top: 28%;
 }
 
 .item3{
@@ -117,7 +117,7 @@
     background-size: cover;
 }
 .item3-content{
-    margin-top: 25%;
+    margin-top: 20%;
 }
 
 /*----body middle----*/
@@ -148,7 +148,7 @@
 }
 .item-m-img{
     width: 100%;
-    height:65%; 
+    height:65%;
 }
 .item-img{
     width: 100%;
@@ -207,3 +207,4 @@
 .main-footer-link:hover {
     color: white;
 }
+/*----media @ 600px----*/
