--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -21,163 +21,340 @@
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
+@media (max-width: 48em) {
+    .header-main {
+        width: 100%;
+        height: 12rem;
+    }
+    .nav-content{
+        display: grid;
+        grid-template-columns: auto;
+        grid-template-rows: 20% 80%;
+        grid-row-gap:1rem; 
+    }
+    .nav-logo{
+        width: 100%;
+        height: 100%;
+    }
+    .nw-logo{
+        width: 20%;
+        height: 100%;
+    }
+    .nav-list{
+        width: 100%;
+        height: 60%; 
+    }
+    .nav-element{
+        margin: 0 auto;
+    }
+    .clearfix{
+        display: grid;
+        grid-template-columns: auto;
+        border: 1px solid #000;
+    }
+    .nav-li-a{
+        text-decoration: none;
+        color: #595b59;
+    }
+    .nav-li-a:hover {
+        text-decoration: none;
+        font-weight: bolder;
+        color: #aa360b;
+    }
 
-/*---header---*/
-.header-main {
-    width: 100%;
-    height: 4rem;
-}
-.nav-content{
-    width: 100%;
-    height: 100%;
-}
-.nav-logo{
-    width: 9%;
-    height: 100%;
-}
-.nw-logo{
-    width: 100%;
-    height: 100%;
-}
-.nav-list{
-    width: 80%;
-    height: 100%;
-}
-.nav-element{
-    width: auto;
-    height: 100%;
-    float: left;
-    margin: 2.1% .75rem ;
-}
-.clearfix::after {
-    content: "";
-    clear: both;
-    display: table;
-}
-.nav-li-a{
-    color: #595b59;
-    font-weight: 400;
-    text-decoration: none;
-}
-.nav-li-a:hover {
-    color: black;
-    font-weight: bold;
+    /*---main top---*/
+    .main-top{
+        display: grid;
+        grid-template-columns: auto;
+    }
+    .item1{
+        width: 100%;
+        height: 10rem;
+        background-image: url("https://i.ytimg.com/vi/2K_fMCfhpcI/maxresdefault.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        padding-top: 15%;
+    }
+    .item-par{
+        color: black;
+        font-weight: bolder;
+        font-size: 75%;
+    }
+    .item-h{
+        color: black;
+        font-weight: bolder;
+        font-size: 125%;
+    }
+    .item-link{
+        color: black;
+        font-weight: 400;
+        text-decoration: none;
+    }
+    .item-link:hover {
+        color: burlywood;
+        font-weight: bold;
+    }
+    .item2 {
+        background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2019/03/ausbitcoin-1.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+    .rest-item-top-h{
+        color: white;
+        font-size: 1.4rem;
+    }
+    .item2-content{
+        margin-top: 28%;
+    }
+
+    .item3{
+        background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2019/03/Untitled-design-9-796x417.png");
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+    .item3-content{
+        margin-top: 20%;
+    }
+
+     /*----body middle----*/
+     .body-middle{
+        width: 80%;
+        margin: auto;
+    }
+    .body-middle-header{
+        font-size: 120%;
+    }
+    .body-middle-header-link{
+        color: #aa360b;
+        text-decoration: none;
+    }
+    .body-middle-header-link:hover {
+        color: black;
+        font-size: bold;
+    }
+    .main-middle{
+        display: grid;
+        grid-template-columns: auto auto;
+        grid-template-rows: 18rem;
+        grid-gap: 3px;
+    }
+
+    .item-m{
+        width: 100%;
+        height: 100%;
+    }
+    .item-m-img{
+        width: 100%;
+        height:65%;
+    }
+    .item-img{
+        width: 100%;
+        height: 100%;
+    }
+    .item-m-content{
+        width: 100%;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+    }
+    .item-m-content-h{
+        width: 100;
+        height: 75%;
+        font-size: 100%;
+    }
+    .item-m-content-h:hover {
+        color: #aa360b;
+    }
+    .item-m-content-p{
+        width: 100%;
+        height: 20%;
+    }
+    .item-m-link{
+        width: 100%;
+        height: 100%;
+        color: #595b59;
+        font-weight: 400;
+        font-size: 80%;
+        text-decoration: none;
+    }
+    .item-m-link:hover {
+        color: black;
+        font-weight: bold;
+    }
 }
 
-/*---main--*/
+@media (min-width: 48em) {
+    /*---header---*/
+    .header-main {
+        width: 100%;
+        height: 4rem;
+    }
+    .nav-content{
+        width: 100%;
+        height: 100%;
+        display: flex;
+    }
+    .nav-logo{
+        width: 9%;
+        height: 100%;
+    }
+    .nw-logo{
+        width: 100%;
+        height: 100%;
+    }
+    .nav-list{
+        width: 80%;
+        height: 100%;
+    }
+    .nav-element{
+        width: auto;
+        height: 100%;
+        float: left;
+        margin: 2.1% .75rem ;
+    }
+    .clearfix::after {
+        content: "";
+        clear: both;
+        display: table;
+    }
+    .nav-li-a{
+        color: #595b59;
+        font-weight: 400;
+        text-decoration: none;
+    }
+    .nav-li-a:hover {
+        color: black;
+        font-weight: bold;
+    }
 
-.main-top{
-    display: grid;
-    grid-template-columns: auto auto auto;
-    grid-template-rows: 15rem 15rem;
-    grid-gap: 10px;
-}
-.item1 {
-    grid-row: 1 / span 2;
-    grid-column: 1 / span 2;
-    background-image: url("https://i.ytimg.com/vi/2K_fMCfhpcI/maxresdefault.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    padding-top: 30%;
-}
-.item-par{
-    color: white;
-    font-size: 1rem;
-}
-.item-h{
-    color: white;
-    font-size: 2.8rem;
-}
-.item-link{
-    color: white;
-    font-weight: 400;
-    text-decoration: none;
-}
-.item-link:hover {
-    color: burlywood;
-    font-weight: bold;
-}
+    /*---main--*/
 
-.item2 {
-    background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2019/03/ausbitcoin-1.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-.rest-item-top-h{
-    color: white;
-    font-size: 1.4rem;
-}
-.item2-content{
-    margin-top: 28%;
-}
+    .main-top{
+        display: grid;
+        grid-template-columns: auto auto auto;
+        grid-template-rows: 15rem 15rem;
+        grid-gap: 10px;
+    }
+    .item1 {
+        grid-row: 1 / span 2;
+        grid-column: 1 / span 2;
+        background-image: url("https://i.ytimg.com/vi/2K_fMCfhpcI/maxresdefault.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        padding-top: 30%;
+    }
+    .item-par{
+        color: white;
+        font-size: 1rem;
+    }
+    .item-h{
+        color: white;
+        font-size: 2.8rem;
+    }
+    .item-link{
+        color: white;
+        font-weight: 400;
+        text-decoration: none;
+    }
+    .item-link:hover {
+        color: burlywood;
+        font-weight: bold;
+    }
 
-.item3{
-    background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2019/03/Untitled-design-9-796x417.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-.item3-content{
-    margin-top: 20%;
-}
+    .item2 {
+        background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2019/03/ausbitcoin-1.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+    .rest-item-top-h{
+        color: white;
+        font-size: 1.4rem;
+    }
+    .item2-content{
+        margin-top: 28%;
+    }
 
-/*----body middle----*/
-.body-middle{
-    width: 80%;
-    margin: auto;
-}
-.body-middle-header{
-    font-size: 1.5rem;
-}
-.body-middle-header-link{
-    color: #aa360b;
-    text-decoration: none;
-}
-.body-middle-header-link:hover {
-    color: black;
-    font-size: bold;
-}
-.main-middle{
-    display: grid;
-    grid-template-columns: auto auto auto auto;
-    grid-template-rows: 15rem 15rem;
-    grid-gap: 15px;
-}
-.item-m{
-    width: 100%;
-    height: 100%;
-}
-.item-m-img{
-    width: 100%;
-    height:65%;
-}
-.item-img{
-    width: 100%;
-    height: 100%;
-}
-.item-m-content{
-    width: 100%;
-    height: 20%;
-}
-.item-m-content-h{
-    font-size: 1.2rem;
-}
-.item-m-content-h:hover {
-    color: #aa360b;
-}
-.item-m-link{
-    color: #595b59;
-    font-weight: 400;
-    text-decoration: none;
-}
-.item-m-link:hover {
-    color: black;
-    font-weight: bold;
-}
+    .item3{
+        background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2019/03/Untitled-design-9-796x417.png");
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+    .item3-content{
+        margin-top: 20%;
+    }
 
+    /*----body middle----*/
+    .body-middle{
+        width: 80%;
+        margin: auto;
+    }
+    .body-middle-header{
+        font-size: 1.5rem;
+    }
+    .body-middle-header-link{
+        color: #aa360b;
+        text-decoration: none;
+    }
+    .body-middle-header-link:hover {
+        color: black;
+        font-size: bold;
+    }
+    .main-middle{
+        display: grid;
+        grid-template-columns: auto auto auto auto;
+        grid-template-rows: 15rem 15rem;
+        grid-gap: 15px;
+    }
+    .item-m{
+        width: 100%;
+        height: 100%;
+    }
+    .item-m-img{
+        width: 100%;
+        height:65%;
+    }
+    .item-img{
+        width: 100%;
+        height: 100%;
+    }
+    .item-m-content{
+        width: 100%;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+    }
+    .item-m-content-h{
+        width: 100;
+        height: 75%;
+        font-size: 100%;
+    }
+    .item-m-content-h:hover {
+        color: #aa360b;
+    }
+    .item-m-content-p{
+        width: 100%;
+        height: 20%;
+    }
+    .item-m-link{
+        width: 100%;
+        height: 100%;
+        color: #595b59;
+        font-weight: 400;
+        font-size: 80%;
+        text-decoration: none;
+    }
+    .item-m-link:hover {
+        color: black;
+        font-weight: bold;
+    }
+
+    
+    /*----media @ 600px----*/
+}
 /*----footer----*/
 .main-footer{
     width: 100%;
-    height: 7rem;
+    height: auto;
     background-color: #232222;
 }
 .main-footer-f{
@@ -193,12 +370,20 @@
     padding-top: 2%;
 }
 .main-footer-s{
-    width: 50%;
+    width:40%;
     height: 50%;
     margin: 0 auto;
 }
 .footer-s-list{
-    width: 12%;
+    width: auto;
+    height: 100%;
+    float: left;
+    margin: 2.1% .75rem ;
+}
+.footer-list-s-content::after {
+    content: "";
+    clear: both;
+    display: table;
 }
 .main-footer-link{
     text-decoration: none;
@@ -207,4 +392,3 @@
 .main-footer-link:hover {
     color: white;
 }
-/*----media @ 600px----*/
