--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -21,51 +21,42 @@
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
-@media (max-width: 48em) {
+@media only screen and (min-width : 320px) and (max-width : 767px) {
+    /*---header---*/
     .header-main {
         width: 100%;
-        height: 12rem;
+        height: 4rem;
+        background-color: #232222;
     }
     .nav-content{
-        display: grid;
-        grid-template-columns: auto;
-        grid-template-rows: 20% 80%;
-        grid-row-gap:1rem; 
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: space-between;
+    }
+    .nav-icon{
+        display:inline-block;
+        border: none;
+        width: 10%;
+        margin-right: 5%;
+        color: #aa360b;
     }
     .nav-logo{
-        width: 100%;
+        width: 9%;
         height: 100%;
     }
     .nw-logo{
-        width: 20%;
+        width: 100%;
         height: 100%;
     }
     .nav-list{
-        width: 100%;
-        height: 60%; 
+        display: none;
     }
-    .nav-element{
-        margin: 0 auto;
-    }
-    .clearfix{
-        display: grid;
-        grid-template-columns: auto;
-        border: 1px solid #000;
-    }
-    .nav-li-a{
-        text-decoration: none;
-        color: #595b59;
-    }
-    .nav-li-a:hover {
-        text-decoration: none;
-        font-weight: bolder;
-        color: #aa360b;
-    }
-
     /*---main top---*/
     .main-top{
         display: grid;
         grid-template-columns: auto;
+        grid-gap: 5px;
     }
     .item1{
         width: 100%;
@@ -115,6 +106,170 @@
     .item3-content{
         margin-top: 20%;
     }
+     /*----body middle----*/
+    .body-middle{
+        width: 80%;
+        margin: auto;
+    }
+    .body-middle-header{
+        font-size: 120%;
+    }
+    .body-middle-header-link{
+        color: #aa360b;
+        text-decoration: none;
+    }
+    .body-middle-header-link:hover {
+        color: black;
+        font-size: bold;
+    }
+    .main-middle{
+        display: grid;
+        grid-template-columns: auto;
+        grid-template-rows: 3rem;
+        grid-gap: 8px;
+    }
+
+    .item-m{
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+    }
+    .item-m-img{
+        width: 20%;
+        height: 100%;
+    }
+    .item-img{
+        width: 100%;
+        height: 100%;
+    }
+    .item-m-content{
+        width: 75%;
+        height: auto;
+    }
+    .item-m-content-h{
+        width: 100;
+        font-size: 100%;
+    }
+    .item-m-content-h:hover {
+        color: #aa360b;
+    }
+    .item-m-content-p{
+        width: 100%;
+    }
+    .item-m-link{
+        width: 100%;
+        color: #595b59;
+        font-weight: 400;
+        font-size: 80%;
+        text-decoration: none;
+    }
+    .item-m-link:hover {
+        color: black;
+        font-weight: bold;
+    }
+
+}
+/*---tab---*/
+@media only screen and (min-width : 768px) and (max-width : 1023px) {
+    /*---header---*/
+    .header-main {
+        width: 100%;
+    }
+    .nav-content{
+        width: 100%;
+        height: 100%;
+        display: flex;
+    }
+    .nav-icon{
+        display:none;
+    }
+    .nav-logo{
+        width: 9%;
+        height: 100%;
+    }
+    .nw-logo{
+        width: 100%;
+        height: 100%;
+    }
+    .nav-list{
+        width: 80%;
+        height: 100%;
+    }
+    .nav-element{
+        width: auto;
+        height: 100%;
+        float: left;
+        margin: 2.1% .75rem ;
+    }
+    .clearfix::after {
+        content: "";
+        clear: both;
+        display: table;
+    }
+    .nav-li-a{
+        color: #595b59;
+        font-weight: 400;
+        text-decoration: none;
+    }
+    .nav-li-a:hover {
+        color: black;
+        font-weight: bold;
+    }
+
+    /*---main top---*/
+    .main-top{
+        display: grid;
+        grid-template-columns: auto auto auto;
+        grid-template-rows: 15rem 15rem;
+        grid-gap: 10px;
+    }
+    .item1 {
+        grid-row: 1 / span 2;
+        grid-column: 1 / span 2;
+        background-image: url("https://i.ytimg.com/vi/2K_fMCfhpcI/maxresdefault.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        padding-top: 30%;
+    }
+    .item-par{
+        color: white;
+        font-size: 1rem;
+    }
+    .item-h{
+        color: white;
+        font-size: 2.8rem;
+    }
+    .item-link{
+        color: white;
+        font-weight: 400;
+        text-decoration: none;
+    }
+    .item-link:hover {
+        color: burlywood;
+        font-weight: bold;
+    }
+
+    .item2 {
+        background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2019/03/ausbitcoin-1.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+    .rest-item-top-h{
+        color: white;
+        font-size: 1.4rem;
+    }
+    .item2-content{
+        margin-top: 28%;
+    }
+
+    .item3{
+        background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2019/03/Untitled-design-9-796x417.png");
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+    .item3-content{
+        margin-top: 20%;
+    }
 
      /*----body middle----*/
      .body-middle{
@@ -134,7 +289,7 @@
     }
     .main-middle{
         display: grid;
-        grid-template-columns: auto auto;
+        grid-template-columns: auto auto auto;
         grid-template-rows: 18rem;
         grid-gap: 3px;
     }
@@ -183,7 +338,7 @@
     }
 }
 
-@media (min-width: 48em) {
+@media only screen  and (min-width : 1024px) {
     /*---header---*/
     .header-main {
         width: 100%;
@@ -193,6 +348,9 @@
         width: 100%;
         height: 100%;
         display: flex;
+    }
+    .nav-icon{
+        display:none;
     }
     .nav-logo{
         width: 9%;
